// jpa setting reference to https://gist.github.com/dsdstudio/bfe66037d39073f489dc8bfc5467fdfe
import nu.studer.gradle.jooq.JooqEdition

buildscript {
    repositories {
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }
    dependencies {
        classpath("nu.studer:gradle-jooq-plugin:3.0.3")
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'nu.studer.jooq' version '6.0.1'  // gradle-jooq-plugin
}

group = 'com.app'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    /**
     * basic setting
     * 	- jpa
     * 	- jooq
     * 	- web starter service
     * 	- dev tools
     * 	- lombok
     * 	- mysql connector
     */

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'

    //spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-test'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    //  Temporary explicit version to fix Thymeleaf bug
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'

    // 타임리프 (thymeleaf)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    //validation 검증
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //ModelMapper
    implementation 'org.modelmapper:modelmapper:3.1.1'

    //junit test
    testImplementation('org.junit.platform:junit-platform-launcher:1.9.2')
    testImplementation('org.junit.jupiter:junit-jupiter:5.9.2')

    //jooq
    implementation 'org.springframework.boot:spring-boot-starter-jooq'
    implementation 'org.jooq:jooq:3.18.0'
    jooqGenerator 'mysql:mysql-connector-java:8.0.25'

    //mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //jsoup
    implementation 'org.jsoup:jsoup:1.15.4'

    //json simple parser
    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'


}

tasks.named('test') {
    useJUnitPlatform()
}

jooq {
    version = '3.18.0'  // default (can be omitted)
    edition = JooqEdition.OSS  // default (can be omitted)

    configurations {
        main {  // name of the jOOQ configuration
            generateSchemaSourceOnCompilation = true  // default (can be omitted)
//      TRACE, DEBUG, INFO, WARN, ERROR, FATAL
            generationTool {
                logging = org.jooq.meta.jaxb.Logging.DEBUG
//                logging = 'WARN'
//                onError = 'LOG'  // FAIL, LOG, SILENT

                jdbc {
                    driver = 'com.mysql.cj.jdbc.Driver'
                    url = 'jdbc:mysql://localhost:3306/jungsuri'
                    user = System.getenv('dbLoginId')
                    password = System.getenv('dbPassword')
                    schema = 'jungsuri'
                }

                generator {
                    name = 'org.jooq.codegen.DefaultGenerator'
                    strategy {
                        name = 'org.jooq.codegen.DefaultGeneratorStrategy'
                    }
                    database {
                        // https://www.jooq.org/doc/3.15/manual/code-generation/codegen-advanced/codegen-config-database/codegen-database-name/
                        name = 'org.jooq.meta.mysql.MySQLDatabase'
                        inputSchema = 'jungsuri'

                        includes = '.*' // 정규표현식
                        excludes = 'test_.* | temp_.*'
                    }
                    generate {
                        generatedSerialVersionUID = 'CONSTANT'
                        javaTimeTypes = true    // java.time.*
                        deprecated = false
                        records = true
                        immutablePojos = true
                        fluentSetters = true
                    }
                    target {
                        packageName = 'jooq.dsl'
                        directory = 'src/generated/jooq/'  // default (can be omitted)
                    }
                }
            }
        }
    }
}

